@@ -20,10 +20,12 @@ package org.apache.solr.packagemanager;
 import static org.apache.solr.packagemanager.PackageUtils.getMapper;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
 import java.nio.ByteBuffer;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -34,13 +36,11 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.V2Request;
-import org.apache.solr.client.solrj.request.beans.Package;
+import org.apache.solr.client.solrj.request.beans.PackagePayload;
 import org.apache.solr.client.solrj.response.V2Response;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
@@ -50,7 +50,7 @@ import org.apache.solr.filestore.PackageStoreAPI;
 import org.apache.solr.packagemanager.SolrPackage.Artifact;
 import org.apache.solr.packagemanager.SolrPackage.SolrPackageRelease;
 import org.apache.solr.pkg.PackageAPI;
-import org.apache.solr.pkg.PackageLoader;
+import org.apache.solr.pkg.SolrPackageLoader;
 import org.apache.solr.util.SolrCLI;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
@@ -129,7 +129,9 @@ public class RepositoryManager {
           true);
     }
 
-    addKey(IOUtils.toByteArray(new URL(uri + "/publickey.der").openStream()), repoName + ".der");
+    try (InputStream is = new URL(uri + "/publickey.der").openStream()) {
+      addKey(is.readAllBytes(), repoName + ".der");
+    }
   }
 
   public void addKey(byte[] key, String destinationKeyFilename) throws Exception {
@@ -199,7 +201,7 @@ public class RepositoryManager {
       for (int i = 0; i < release.artifacts.size(); i++) {
         PackageUtils.postFile(
             solrClient,
-            ByteBuffer.wrap(FileUtils.readFileToByteArray(downloaded.get(i).toFile())),
+            ByteBuffer.wrap(Files.readAllBytes(downloaded.get(i))),
             String.format(
                 Locale.ROOT,
                 "/package/%s/%s/%s",
@@ -211,7 +213,7 @@ public class RepositoryManager {
 
       // Call Package API to add this version of the package
       PackageUtils.printGreen("Executing Package API to register this package...");
-      Package.AddVersion add = new Package.AddVersion();
+      PackagePayload.AddVersion add = new PackagePayload.AddVersion();
       add.version = version;
       add.pkg = packageName;
       add.files =
@@ -330,7 +332,7 @@ public class RepositoryManager {
 
   /**
    * Install a version of the package. Also, run verify commands in case some collection was using
-   * {@link PackageLoader#LATEST} version of this package and got auto-updated.
+   * {@link SolrPackageLoader#LATEST} version of this package and got auto-updated.
    */
   public boolean install(String packageName, String version) throws SolrException {
     SolrPackageRelease pkg = getLastPackageRelease(packageName);
@@ -347,7 +349,8 @@ public class RepositoryManager {
     List<String> collectionsPeggedToLatest =
         collectionsDeployedIn.keySet().stream()
             .filter(
-                collection -> collectionsDeployedIn.get(collection).equals(PackageLoader.LATEST))
+                collection ->
+                    collectionsDeployedIn.get(collection).equals(SolrPackageLoader.LATEST))
             .collect(Collectors.toList());
     if (!collectionsPeggedToLatest.isEmpty()) {
       PackageUtils.printGreen(
