@@ -18,10 +18,11 @@
 package org.apache.solr.metrics.reporters;
 
 import java.lang.invoke.MethodHandles;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
-import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.core.CoreContainer;
@@ -49,8 +50,7 @@ public class SolrSlf4jReporterTest extends SolrTestCaseJ4 {
     System.setProperty("solr.test.sys.prop2", "proptwo");
 
     String solrXml =
-        FileUtils.readFileToString(
-            Paths.get(home.toString(), "solr-slf4jreporter.xml").toFile(), "UTF-8");
+        Files.readString(home.resolve("solr-slf4jreporter.xml"), StandardCharsets.UTF_8);
     NodeConfig cfg = SolrXmlConfig.fromString(home, solrXml);
     CoreContainer cc =
         createCoreContainer(
