@@ -21,22 +21,20 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import org.apache.commons.io.IOUtils;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.SolrInputDocument;
+import org.apache.solr.embedded.JettySolrRunner;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -46,12 +44,14 @@ import org.junit.Test;
 @SuppressSSL // does not yet work with ssl yet - uses raw java.net.URL API rather than HttpClient
 public class TestRemoteStreaming extends SolrJettyTestBase {
 
+  private static JettySolrRunner jettySolrRunner;
+
   @BeforeClass
   public static void beforeTest() throws Exception {
     // this one has handleSelect=true which a test here needs
     File solrHomeDirectory = createTempDir(LuceneTestCase.getTestClass().getSimpleName()).toFile();
     setupJettyTestHome(solrHomeDirectory, "collection1");
-    createAndStartJetty(solrHomeDirectory.getAbsolutePath());
+    jettySolrRunner = createAndStartJetty(solrHomeDirectory.getAbsolutePath());
   }
 
   @AfterClass
@@ -70,34 +70,36 @@ public class TestRemoteStreaming extends SolrJettyTestBase {
 
   @Test
   public void testMakeDeleteAllUrl() throws Exception {
-    getUrlForString(makeDeleteAllUrl());
+    assertTrue(searchFindsIt());
+    attemptHttpGet(makeDeleteAllUrl());
     assertFalse(searchFindsIt());
   }
 
   @Test
   public void testStreamUrl() throws Exception {
-    HttpSolrClient client = (HttpSolrClient) getSolrClient();
-    String streamUrl = client.getBaseURL() + "/select?q=*:*&fl=id&wt=csv";
+    String streamUrl =
+        jettySolrRunner.getBaseUrl().toString()
+            + "/"
+            + DEFAULT_TEST_COLLECTION_NAME
+            + "/select?q=*:*&fl=id&wt=csv";
 
     String getUrl =
-        client.getBaseURL()
+        jettySolrRunner.getBaseUrl().toString()
+            + "/"
+            + DEFAULT_TEST_COLLECTION_NAME
             + "/debug/dump?wt=xml&stream.url="
-            + URLEncoder.encode(streamUrl, "UTF-8");
-    String content = getUrlForString(getUrl);
+            + URLEncoder.encode(streamUrl, StandardCharsets.UTF_8);
+    String content = attemptHttpGet(getUrl);
     assertTrue(content.contains("1234"));
-    // System.out.println(content);
   }
 
-  private String getUrlForString(String getUrl) throws IOException {
+  private String attemptHttpGet(String getUrl) throws IOException {
     Object obj = new URL(getUrl).getContent();
     if (obj instanceof InputStream) {
-      InputStream inputStream = (InputStream) obj;
-      try {
+      try (InputStream inputStream = (InputStream) obj) {
         StringWriter strWriter = new StringWriter();
         new InputStreamReader(inputStream, StandardCharsets.UTF_8).transferTo(strWriter);
         return strWriter.toString();
-      } finally {
-        IOUtils.closeQuietly(inputStream);
       }
     }
     return null;
@@ -109,17 +111,20 @@ public class TestRemoteStreaming extends SolrJettyTestBase {
     SolrQuery query = new SolrQuery();
     query.setQuery("*:*"); // for anything
     query.add("stream.url", makeDeleteAllUrl());
-    SolrException se = expectThrows(SolrException.class, () -> getSolrClient().query(query));
-    assertSame(ErrorCode.BAD_REQUEST, ErrorCode.getErrorCode(se.code()));
+    try (SolrClient solrClient = createNewSolrClient()) {
+      SolrException se = expectThrows(SolrException.class, () -> solrClient.query(query));
+      assertSame(ErrorCode.BAD_REQUEST, ErrorCode.getErrorCode(se.code()));
+    }
   }
 
-  /** Compose an url that if you get it, it will delete all the data. */
-  private String makeDeleteAllUrl() throws UnsupportedEncodingException {
-    HttpSolrClient client = (HttpSolrClient) getSolrClient();
+  /** Compose an HTTP GET url that will delete all the data. */
+  private String makeDeleteAllUrl() {
     String deleteQuery = "<delete><query>*:*</query></delete>";
-    return client.getBaseURL()
+    return jettySolrRunner.getBaseUrl().toString()
+        + "/"
+        + DEFAULT_TEST_COLLECTION_NAME
         + "/update?commit=true&stream.body="
-        + URLEncoder.encode(deleteQuery, "UTF-8");
+        + URLEncoder.encode(deleteQuery, StandardCharsets.UTF_8);
   }
 
   private boolean searchFindsIt() throws SolrServerException, IOException {
