@@ -16,10 +16,12 @@
  */
 package org.apache.solr.s3;
 
+import static org.hamcrest.Matchers.containsString;
+
 import java.io.InputStream;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
-import org.apache.commons.io.IOUtils;
+import org.hamcrest.MatcherAssert;
 import org.junit.Test;
 
 /** Basic test that write data and read them through the S3 client. */
@@ -31,7 +33,7 @@ public class S3ReadWriteTest extends AbstractS3ClientTest {
     pushContent("/foo", "my blob");
 
     try (InputStream stream = client.pullStream("/foo")) {
-      assertEquals("my blob", IOUtils.toString(stream, Charset.defaultCharset()));
+      assertEquals("my blob", new String(stream.readAllBytes(), StandardCharsets.UTF_8));
     }
   }
 
@@ -67,11 +69,12 @@ public class S3ReadWriteTest extends AbstractS3ClientTest {
     pushContent("/override", "old content");
     pushContent("/override", "new content");
 
-    InputStream stream = client.pullStream("/override");
-    assertEquals(
-        "File contents should have been overridden",
-        "new content",
-        IOUtils.toString(stream, Charset.defaultCharset()));
+    try (InputStream stream = client.pullStream("/override")) {
+      assertEquals(
+          "File contents should have been overridden",
+          "new content",
+          new String(stream.readAllBytes(), StandardCharsets.UTF_8));
+    }
   }
 
   /** Check getting the length of a written file. */
@@ -91,7 +94,8 @@ public class S3ReadWriteTest extends AbstractS3ClientTest {
             "Getting length on a dir should throw exception",
             S3Exception.class,
             () -> client.length("/directory"));
-    assertEquals("Path is Directory", exception.getMessage());
+    MatcherAssert.assertThat(
+        exception.getMessage(), exception.getMessage(), containsString("Path is Directory"));
   }
 
   /** Check various method throws the expected exception of a missing S3 key. */
