@@ -16,17 +16,16 @@
  */
 package org.apache.solr.client.solrj.embedded;
 
-import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
 import java.io.File;
+import java.io.InputStream;
 import java.net.URL;
 import java.util.Locale;
 import java.util.Random;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.Header;
 import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpRequestBase;
+import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4;
@@ -38,9 +37,6 @@ import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.server.session.DefaultSessionIdManager;
 import org.eclipse.jetty.webapp.WebAppContext;
-import org.junit.Rule;
-import org.junit.rules.RuleChain;
-import org.junit.rules.TestRule;
 
 /**
  * @since solr 1.3
@@ -48,8 +44,6 @@ import org.junit.rules.TestRule;
 public class JettyWebappTest extends SolrTestCaseJ4 {
   int port = 0;
   static final String context = "/test";
-
-  @Rule public TestRule solrTestRules = RuleChain.outerRule(new SystemPropertiesRestoreRule());
 
   Server server;
 
@@ -99,15 +93,17 @@ public class JettyWebappTest extends SolrTestCaseJ4 {
     // sure they compile ok
 
     String adminPath = "http://127.0.0.1:" + port + context + "/";
-    byte[] bytes = IOUtils.toByteArray(new URL(adminPath).openStream());
-    assertNotNull(bytes); // real error will be an exception
+    try (InputStream is = new URL(adminPath).openStream()) {
+      assertNotNull(is.readAllBytes()); // real error will be an exception
+    }
 
-    HttpClient client = HttpClients.createDefault();
-    HttpRequestBase m = new HttpGet(adminPath);
-    HttpResponse response = client.execute(m, HttpClientUtil.createNewHttpClientRequestContext());
-    assertEquals(200, response.getStatusLine().getStatusCode());
-    Header header = response.getFirstHeader("X-Frame-Options");
-    assertEquals("DENY", header.getValue().toUpperCase(Locale.ROOT));
-    m.releaseConnection();
+    try (CloseableHttpClient client = HttpClients.createDefault()) {
+      HttpRequestBase m = new HttpGet(adminPath);
+      HttpResponse response = client.execute(m, HttpClientUtil.createNewHttpClientRequestContext());
+      assertEquals(200, response.getStatusLine().getStatusCode());
+      Header header = response.getFirstHeader("X-Frame-Options");
+      assertEquals("DENY", header.getValue().toUpperCase(Locale.ROOT));
+      m.releaseConnection();
+    }
   }
 }
